# klip_nav

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/workflows/: python-package.yml
klip_nav/: main.py  tui.py  utils.py
tests/: parser_test.py
tests/resources/: clipping_sample.txt  correctly_parsed_sample.json
