[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klip_nav"
version = "0.0.5"
authors = [
  { name="skogsgren", email="6107181+skogsgren@users.noreply.github.com" },
]
description = "Python TUI for navigating kindle clippings"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "urwid ~= 2.1.2",
    "clipboard ~= 0.0.4",
]

[project.urls]
"Homepage" = "https://github.com/skogsgren/klip-nav"
"Bug Tracker" = "https://github.com/skogsgren/klip-nav/issues"

[project.scripts]
klip_nav = "klip_nav.main:main"

[project.optional-dependencies]
test = [
    "coverage[toml] ~= 7.1",
    "pytest ~= 7.2",
    "pytest-cov ~= 4.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/klip_nav",
    "/LICENSE",
    "/README.md",
]

[tool.black]
line-length = 80
